--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,2 @@
-# See http://docs.spring.io/spring-boot/docs/1.1.4.RELEASE/reference/htmlsingle/#boot-features-external-config-profile-specific-properties
-# for more details about creating profile-specific property files
-
-spring.data.mongodb.uri=mongodb://root:123@ds050189.mlab.com:50189/renquila-mdb
+#spring.datasource.type=org.apache.tomcat.jdbc.pool.DataSource
+server.port=8088
